[gd_scene load_steps=7 format=3]

[ext_resource type="Script" path="res://scripts/ui/error_popup.gd" id="1_script"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
content_margin_left = 40.0
content_margin_top = 30.0
content_margin_right = 40.0
content_margin_bottom = 30.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_retry"]
bg_color = Color(0.3, 0.3, 0.3, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
content_margin_left = 16.0
content_margin_right = 16.0
shadow_color = Color(0.3, 0.3, 0.3, 0.3)
shadow_size = 8
shadow_offset = Vector2(0, 4)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_retry_hover"]
bg_color = Color(0.35, 0.35, 0.35, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
content_margin_left = 16.0
content_margin_right = 16.0
shadow_color = Color(0.3, 0.3, 0.3, 0.4)
shadow_size = 12
shadow_offset = Vector2(0, 6)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_close"]
bg_color = Color(0.3, 0.3, 0.3, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
content_margin_left = 16.0
content_margin_right = 16.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_button_close_hover"]
bg_color = Color(0.3, 0.3, 0.3, 1)
corner_radius_top_left = 12
corner_radius_top_right = 12
corner_radius_bottom_right = 12
corner_radius_bottom_left = 12
content_margin_left = 16.0
content_margin_right = 16.0
shadow_color = Color(0.3, 0.3, 0.3, 0.3)
shadow_size = 8
shadow_offset = Vector2(0, 4)

[node name="ErrorPopup" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.5)

[node name="BackgroundButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="PanelContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")

[node name="VBox" type="VBoxContainer" parent="CenterContainer/Panel"]
custom_minimum_size = Vector2(320, 0)
layout_mode = 2
theme_override_constants/separation = 16

[node name="Title" type="Label" parent="CenterContainer/Panel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.8, 0.2, 0.2, 1)
theme_override_font_sizes/font_size = 22
text = "Error"
horizontal_alignment = 1

[node name="Message" type="Label" parent="CenterContainer/Panel/VBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0.2, 0.2, 0.2, 1)
theme_override_font_sizes/font_size = 16
text = "An error occurred."
horizontal_alignment = 1
autowrap_mode = 2

[node name="Buttons" type="HBoxContainer" parent="CenterContainer/Panel/VBox"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 12

[node name="ActionButton" type="Button" parent="CenterContainer/Panel/VBox/Buttons"]
custom_minimum_size = Vector2(0, 44)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_button_retry")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_retry_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_retry")
theme_override_styles/focus = SubResource("StyleBoxFlat_button_retry")
text = "Retry"

[node name="CloseButton" type="Button" parent="CenterContainer/Panel/VBox/Buttons"]
custom_minimum_size = Vector2(0, 44)
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_button_close")
theme_override_styles/hover = SubResource("StyleBoxFlat_button_close_hover")
theme_override_styles/pressed = SubResource("StyleBoxFlat_button_close")
theme_override_styles/focus = SubResource("StyleBoxFlat_button_close")
text = "Ignore"
